ISPN-3775 Re-synchronize testsuite for Lucene Directory V4 vs. v3 (CheckStyle and other missing improvements)